<resources>
    <string name="app_name">PrimeraApp</string>
    <string name="title_pizza">¡Pizzas!</string>
    <string name="pizza_bbq">BBQ</string>
    <string name="pizza_queso">4Cheese</string>
    <string name="pizza_pollo">Chicken</string>
    <string name="pizza_hawai">Hawaiian</string>
    <string name="elegir">¡Choose one!</string>
    <string name="title_activity_pizza_bbq_main">PizzaBbqMainActivity</string>
    <string name="title_activity_pizza_bbq">PizzaBbqActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="lemai">E-mail</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
</resources>
